Closed
Bug 1753881
Opened 3 years ago
Closed 3 years ago
have PresShell::GetVisualViewportOffset() either return a maybe or layout scroll offset if vv offset is not set
Categories
(Core :: Panning and Zooming, defect, P3)
Core
Panning and Zooming
Tracking
()
RESOLVED
FIXED
99 Branch
| Tracking | Status | |
|---|---|---|
| firefox99 | --- | fixed |
People
(Reporter: tnikkel, Assigned: tnikkel)
References
(Regressed 1 open bug)
Details
Attachments
(2 files)
Followup from https://phabricator.services.mozilla.com/D137873
It fails a few tests on try server to make it use the layout scroll offset. Have to investigate.
| Assignee | ||
Comment 1•3 years ago
|
||
gfx/layers/apz/test/mochitest/browser_test_background_tab_load_scroll.js added in https://phabricator.services.mozilla.com/D137960 has some todo that would be fixed by this bug.
Updated•3 years ago
|
Severity: -- → S3
Priority: -- → P3
| Assignee | ||
Comment 2•3 years ago
|
||
Because that is the correct value.
Updated•3 years ago
|
Assignee: nobody → tnikkel
Status: NEW → ASSIGNED
| Assignee | ||
Updated•3 years ago
|
| Assignee | ||
Comment 3•3 years ago
|
||
Depends on D139472
Pushed by tnikkel@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/cdc7bd69e232
If the visual viewport offset hasn't been set on the presshell return the layout scroll position. r=botond
https://hg.mozilla.org/integration/autoland/rev/55ddebf5b6da
Simplify a few IsVisualViewportOffsetSet callers. r=botond
Comment 5•3 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/cdc7bd69e232
https://hg.mozilla.org/mozilla-central/rev/55ddebf5b6da
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
status-firefox99:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 99 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•