Bug 1753881. If the visual viewport offset hasn't been set on the presshell return the layout scroll position. r=botond

Because that is the correct value.

Differential Revision: https://phabricator.services.mozilla.com/D139472